# precis-producer

./: .gitignore  COWORK_INSTALL.md  Makefile  PRECIS_PROMPT.md  README.md  books.example.json  compile_precis.py  config.example.json  index_new_book.py  install.sh  install_steps.sh  precis_common.py  pyproject.toml  scan_external.py  server.py  start.py  start.sh  zotero_scan.py
_indexes/: ellingwood.txt  felter_mm.txt  kings.txt  kings_lookup.json  potters.txt
templates/: index.html  setup.html
